fix horizontal flip alignment issues on spatial_ge and reorganized code

--- a/projects/web-mev/src/app/d3/components/spotlight/spotlight.component.scss
+++ b/projects/web-mev/src/app/d3/components/spotlight/spotlight.component.scss
@@ -588,3 +588,7 @@ mat-slider {
     display: flex;
     margin-left: 10px;
 }
+
+.tipHeader{
+    font-weight: bold;
+}
